--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.7",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
